src/components/contact/contact.styl
.c-contact
  background $color-light-grey

  &__wrapper
    background $color-brand
    color #fff

  &__cell
    padding 2rem

  &__form
    border-right 1px solid #fff

  &__legend
    font-weight 700
    font-size 1.15rem
    padding 0 2rem
    margin-bottom 2rem
    text-transform uppercase

  &__row
    display flex
    padding 0 4rem 0 2rem
    margin-bottom 0.5rem

  &__label
    display inline-block
    font-size rem(13)
    padding 0.45rem 0.35rem 0 0
    text-align right
    text-transform uppercase
    vertical-align top
    width 6rem

  &__field,
  &__button
    background #fff
    border none

  &__field,
  &__controls
    width 100%

  &__field
    color $color-brand
    padding 0.25rem

  &__field--textarea
    height 5rem
    resize vertical

  &__button
    color #000
    font-size rem(14)
    padding 0.5rem 1.5rem
    text-transform uppercase

  &__fb
    text-align right
    padding-right 4rem

  &__map
    border 3px solid #fff
    border-radius 4px
    height 22rem
    margin-bottom 3rem
    position relative

  &__separator
    border-right 1px solid #fff
    margin-right 2.5rem

  &__heading,
  &__description
    margin-bottom 1.5rem
    text-transform uppercase

  &__heading
    color $color-accent
    font-size 1.75rem

  &__description
    line-height 1.5

    &:last-child
      margin-bottom 0

  &__icon-wrapper
    align-items center
    background $color-accent
    border-radius 50%
    color $color-brand
    display flex
    margin-right 0.5rem
    width 2.75rem
    height @width
    text-align center

  &__icon
    font-size 1.75rem
    margin auto

  &__header-wrapper
    display flex
    margin 2rem 0

  &__special-header
    align-items center
    display flex
    margin auto

  &__feedback
    padding 1rem 0 0 4.5rem

